--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "swiper": "^11.2.10",
+    "yup": "^1.7.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
