--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "axios": "^1.12.2",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
